// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v2beta1.pbproxystate;

import "pbresource/resource.proto";

message LeafCertificateRef {
  string name = 1;
  string namespace = 2;
  string partition = 3;
  string host = 4;
  string datacenter = 5;
  repeated string dns_san = 6;
}

message TrustBundleRef {
  string peer = 1;
  string trust_domain = 2;
}

message EndpointRef {
  // id is the ServiceEndpoints resource id.
  hashicorp.consul.resource.ID id = 1;
  // mesh port is the name of the port in the ServiceEndpoints that will be used in the generated proxy endpoint.
  string mesh_port = 2;
  // route port is the port being routed to by this cluster, and is used to match only endpoints that expose this port.
  string route_port = 3;
}
